2025-11-27  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Resore BestBrk::n_brk_pos

	Although it's unused for now, let's still keep brk_pos
	allocation size for future use when needed.

	* src/thbrk/brk-maximal.c:
	  - BestBrk::n_brk_pos: restore as size_t type.
	  - best_brk_new: restore old BestBrk::n_brk_pos initialization.

2025-11-27  Marc Mutz <@marcmutz@github.com>

	Fix narrowing size_t to int in BestBrk

	* src/thbrk/brk-maximal.c:
	  - BestBrk::n_brk_pos: remove unused field.
	  - best_brk_new: port to size_t.

2025-11-26  Marc Mutz <@marcmutz@github.com>

	brk_root_pool: port to size_t

	All callers (brk_recover_try() and brk_maximal_do_impl()),
	pass size_t variables, so don't narrow.

	* src/thbrk/brk-maximal.c:
	  - BrkShot::n_brk_pos: type int -> size_t.
	  - brk_root_pool: type of pos_size arg, int -> size_t

2025-11-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Check Doxygen version without autoconf-archive.

	* configure.ac:
	  - Check Doxygen version using AS_VERSION_COMPARE from within
	    autoconf instead of AX_COMPARE_VERSION from autoconf-archive.
	* INSTALL:
	  - Drop autoconf-archive requirement from documentation.

2025-07-03  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Update word break dictionaries

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-geo.txt:
	* data/tdict-history.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt:
	  - Add words.

	* data/tdict-science.txt:
	  - Remove คลอโรฟิลล์, duplicated with -std.

2025-07-03  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Move common typo from -common to -spell

	* data/tdict-common.txt:
	* data/tdict-spell.txt:
	  - Move กาสะลอง (common typo of กาซะลอง)
	    from -common to -spell.

2025-07-03  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Update tdict-std as found

	* data/tdict-std.txt:
	* data/tdict-common.txt:
	* data/tdict-spell.txt:
	  - กาฬาวก -> กาฬาวกหัตถี
	  - add จิรัฐิติกาล